refactor: optimize data retrieval and error handling in service classes
- Replaced direct list access with more descriptive methods (e.g., getLast(), getFirst()) in StudioBookingService for clarity.
- Enhanced error handling in ServiceRequestService to ensure non-blocking behavior during Feign client calls, setting default values gracefully.
- Updated application configuration to include timeout settings for Feign clients to prevent request blocking.